# mcp_tools

./: pyproject.toml
agents/: agent.py  doc_to_post.py
blog/: blog_server.py  server.py
blog/instance/: blog.db
blog/static/: styles.css
blog/static/css/: styles.css
blog/static/js/: burger.js  math_formatting.js
blog/templates/: base.html  index.html  post.html
gmail/: oauth.py  read_mail.py  send_mail.py
rag/: docs_metadata.pkl  embedder.py  indexer.py
servers/: mcp_blog.py  mcp_email.py  mcp_files.py
